--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -1,31 +1,41 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: PACKAGE VERSION\n"
+"Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2022-11-20 05:41 UTC\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"PO-Revision-Date: 2022-11-20 07:14+0100\n"
+"Last-Translator: \n"
+"Language-Team: \n"
+"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
+"X-Generator: Poedit 3.2\n"
 
 #. [modification]: id=non_fatal_wounds
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\_main.cfg:9
 msgid "Non-fatal wounds"
-msgstr ""
+msgstr "Heridas no fatales"
 
 #. [modification]: id=non_fatal_wounds
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\_main.cfg:10
 msgid ""
-"Units killed during a scenario are instead merely wounded, and can be recalled in later scenarios.\n"
+"Units killed during a scenario are instead merely wounded, and can be "
+"recalled in later scenarios.\n"
 "\n"
-"This does not protect your heroes — you’ll still lose if any character who has to survive is wounded. The enemy isn’t going to miss the chance of finishing the battle by letting a leader escape."
+"This does not protect your heroes — you’ll still lose if any character who "
+"has to survive is wounded. The enemy isn’t going to miss the chance of "
+"finishing the battle by letting a leader escape."
 msgstr ""
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_LoW.cfg:35
-msgid "Non-Fatal Wounds: in all of mainline Wesnoth, this scenario is probably the most evil act by the player’s own side. The scenario is called Costly Revenge, and for the story it’s meant to be costly to the elves as well as these innocent saurians."
+msgid ""
+"Non-Fatal Wounds: in all of mainline Wesnoth, this scenario is probably the "
+"most evil act by the player’s own side. The scenario is called Costly "
+"Revenge, and for the story it’s meant to be costly to the elves as well as "
+"these innocent saurians."
 msgstr ""
 
 #. [option]
@@ -56,7 +66,9 @@ msgstr ""
 
 #. [message]: speaker=Ras-Tabahn
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_SotA.cfg:51
-msgid "Maybe as a ghost, but even then she would no longer have the powers of a lich."
+msgid ""
+"Maybe as a ghost, but even then she would no longer have the powers of a "
+"lich."
 msgstr ""
 
 #. [message]: speaker=narrator
@@ -68,19 +80,25 @@ msgstr ""
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaigns.cfg:84
-msgid "The non-fatal wound modification might work unusually with this campaign. The recall lists change during the campaign, and units that are non-fatally wounded may reappear on the wrong recall list."
+msgid ""
+"The non-fatal wound modification might work unusually with this campaign. "
+"The recall lists change during the campaign, and units that are non-fatally "
+"wounded may reappear on the wrong recall list."
 msgstr ""
 
 #. [message]: speaker=narrator
 #. For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaigns.cfg:95
-msgid "The non-fatal wound modification does not affect the objectives for this scenario. The unit survives, but still triggers the same events as if it died."
+msgid ""
+"The non-fatal wound modification does not affect the objectives for this "
+"scenario. The unit survives, but still triggers the same events as if it "
+"died."
 msgstr ""
 
 #. [message]: speaker=$unit.id
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\nfw_main.cfg:61
 msgid "Argh, I’m wounded"
-msgstr ""
+msgstr "¡Argh...! ¡Estoy herido!"
 
 #. [message]: speaker=$unit.id
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\nfw_main.cfg:62
@@ -90,15 +108,18 @@ msgstr ""
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\nfw_main.cfg:66
 msgid ""
-"With this modification enabled, units are merely wounded instead of killed. If you win this scenario then they will be added to your recall list.\n"
+"With this modification enabled, units are merely wounded instead of killed. "
+"If you win this scenario then they will be added to your recall list.\n"
 "\n"
-"This does not apply to any unit that the objectives require you to keep alive. Even if they say they’re only wounded, the enemy will give your heroes no chance."
+"This does not apply to any unit that the objectives require you to keep "
+"alive. Even if they say they’re only wounded, the enemy will give your "
+"heroes no chance."
 msgstr ""
 
 #. [modification]: id=nfw_maimed_edition
 #: Non_Fatal_Wounds_Maimed_Edition\_main.cfg:9
 msgid "Non-fatal wounds: Maimed Edition"
-msgstr ""
+msgstr "Heridas no fatales: Versión Extendida"
 
 #. [modification]: id=nfw_maimed_edition
 #: Non_Fatal_Wounds_Maimed_Edition\_main.cfg:10
@@ -108,39 +129,43 @@ msgstr ""
 #. [checkbox]: id=dead
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Options.cfg:6
 msgid "Enable Death"
-msgstr ""
+msgstr "Activa Muerte"
 
 #. [checkbox]: id=dead
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Options.cfg:7
 msgid "Adds death as a possibility to the table."
-msgstr ""
+msgstr "Añadir la muerte como posibilidad."
 
 #. [checkbox]: id=undead
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Options.cfg:12
 msgid "Rise as Undead"
-msgstr ""
+msgstr "Vuelve como No Muerto"
 
 #. [checkbox]: id=undead
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Options.cfg:13
 msgid ""
-"Adds death as a possibility to the table, but you will bring them back as undead.\n"
-"this is rolled seperatly from the death option so it is advised to have one or the other."
+"Adds death as a possibility to the table, but you will bring them back as "
+"undead.\n"
+"this is rolled seperatly from the death option so it is advised to have one "
+"or the other."
 msgstr ""
+"Muerte como posibilidad, pero vuelve como no muerto.\n"
+"No elijas la anterior opción si eliges esta."
 
 #. [checkbox]: id=funny
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Options.cfg:19
 msgid "Non-canonical Wounds"
-msgstr ""
+msgstr "Heridas no canónicas"
 
 #. [checkbox]: id=funny
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Options.cfg:20
 msgid "These make no logical sense."
-msgstr ""
+msgstr "Posibilidad de heridas absurdas."
 
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:115
 msgid "Recovered from Aquaphobia"
-msgstr ""
+msgstr "Recuperado de Acuafobia"
 
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:141
@@ -155,7 +180,7 @@ msgstr ""
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:193
 msgid "Recovered from Claustrophobia"
-msgstr ""
+msgstr "Recuperado de Claustrofobia"
 
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:219
@@ -165,22 +190,22 @@ msgstr ""
 #. [then]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:256
 msgid "Recovered from cowardice"
-msgstr ""
+msgstr "Recuperado de Cobardía"
 
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:287
 msgid "Recovered from fear of $second_unit.variables.scary_weapon"
-msgstr ""
+msgstr "Recovered from fear of $second_unit.variables.scary_weapon"
 
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:314
 msgid "Recovered from fear of the light"
-msgstr ""
+msgstr "Recuperado del miedo a la luz"
 
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:340
 msgid "Recovered from fear of the dark"
-msgstr ""
+msgstr "Recuperado del miedo a la oscuridad"
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:10
 msgid "Amnesia"
@@ -190,7 +215,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:23
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:56
 msgid "Broken Arm"
-msgstr ""
+msgstr "Brazo roto"
 
 #. [display]: id=broken_arm_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:24
@@ -206,7 +231,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:69
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:99
 msgid "Broken Leg"
-msgstr ""
+msgstr "Pierna rota"
 
 #. [display]: id=broken_leg_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:70
@@ -216,72 +241,75 @@ msgstr ""
 #. [advancement]: id=NFWME_broken_leg_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:82
 msgid "Recover from broken leg."
-msgstr ""
+msgstr "Recuperado de pierna rota"
 
 #. [display]: id=broken_Rib_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:112
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:145
 msgid "Broken Rib"
-msgstr ""
+msgstr "Costilla rota"
 
 #. [display]: id=broken_Rib_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:113
 msgid "Impact resistance -10%."
-msgstr ""
+msgstr "Resistencia a impactos -10%"
 
 #. [advancement]: id=NFWME_broken_rib_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:128
 msgid "Recover from broken rib."
-msgstr ""
+msgstr "Recuperado de costilla rota"
 
 #. [display]: id=burned_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:158
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:191
 msgid "Burned"
-msgstr ""
+msgstr "Quemado"
 
 #. [display]: id=burned_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:159
 msgid "Fire resistance -10%."
-msgstr ""
+msgstr "Resistencia al fuego -10%"
 
 #. [advancement]: id=NFWME_burned_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:174
 msgid "Recover from burned."
-msgstr ""
+msgstr "Recuperado de quemaduras"
 
 #. [display]: id=captured_unit_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:204
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:218
 msgid "Captured"
-msgstr ""
+msgstr "Capturado"
 
 #. [display]: id=captured_unit_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:205
-msgid "Captured units have a increased recall cost untill you recall them once."
+msgid ""
+"Captured units have a increased recall cost untill you recall them once."
 msgstr ""
+"Las unidades capturadas tienen un coste incrementado cuando las recuperes "
+"por primera vez."
 
 #. [display]: id=concussion_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:231
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:262
 msgid "Concussion"
-msgstr ""
+msgstr "Conmoción"
 
 #. [display]: id=concussion_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:232
 msgid "-20% magical damage."
-msgstr ""
+msgstr "Daño mágico -20%"
 
 #. [advancement]: id=NFWME_concussion_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:245
 msgid "Recover from concussion."
-msgstr ""
+msgstr "Recuperado de conmoción"
 
 #. [display]: id=coward_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:275
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:288
 msgid "Coward"
-msgstr ""
+msgstr "Cobarde"
 
 #. [display]: id=coward_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:276
@@ -298,22 +326,22 @@ msgstr ""
 #. [trait]: id=nfwme_dead
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:302
 msgid "dead"
-msgstr ""
+msgstr "muerto"
 
 #. [trait]: id=nfwme_dead
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:303
 msgid "female^dead"
-msgstr ""
+msgstr "muerta"
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:306
 msgid "Dead"
-msgstr ""
+msgstr "Muerto"
 
 #. [attacks]: id=nfwme_scared_of_weapon
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:324
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:360
 msgid "Scared of $nfwme_rand_scary_weapon"
-msgstr ""
+msgstr "Asustado de $nfwme_rand_scary_weapon"
 
 #. [attacks]: id=nfwme_scared_of_weapon
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:325
@@ -326,7 +354,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:373
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:390
 msgid "Aquaphobia"
-msgstr ""
+msgstr "Acuafobia"
 
 #. [display]: id=fear_of_water_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:374
@@ -394,7 +422,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:515
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:531
 msgid "Scared of the dark"
-msgstr ""
+msgstr "Asustado de la oscuridad"
 
 #. [attacks]: id=nfwme_scared_of_dark
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:516
@@ -407,7 +435,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:543
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:559
 msgid "Scared of the light"
-msgstr ""
+msgstr "Asustado de la luz"
 
 #. [attacks]: id=nfwme_scared_of_light
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:544
@@ -425,12 +453,12 @@ msgstr ""
 #. [display]: id=frostbite_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:573
 msgid "Cold resistance -10%."
-msgstr ""
+msgstr "Resistencia al frío -10%"
 
 #. [advancement]: id=NFWME_frostbite_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:588
 msgid "Recover from frostbite."
-msgstr ""
+msgstr "Recuperado de congelación"
 
 #. [display]: id=gash_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:618
@@ -446,7 +474,7 @@ msgstr ""
 #. [advancement]: id=NFWME_gash_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:634
 msgid "Recover from gash."
-msgstr ""
+msgstr "Recuperado de tajo"
 
 #. [display]: id=infection_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:664
@@ -462,7 +490,7 @@ msgstr ""
 #. [advancement]: id=NFWME_infectiont_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:673
 msgid "Recover from infection."
-msgstr ""
+msgstr "Recuperado de infección"
 
 #. [display]: id=insanity_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:704
@@ -478,17 +506,19 @@ msgstr ""
 #. [berserk]: id=nfwme_berserk
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:716
 msgid "berserk"
-msgstr ""
+msgstr "berserk"
 
 #. [berserk]: id=nfwme_berserk
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:717
-msgid "Whether used offensively or defensively, this attack presses the engagement until one of the combatants is slain, or 30 rounds of attacks have occurred."
+msgid ""
+"Whether used offensively or defensively, this attack presses the engagement "
+"until one of the combatants is slain, or 30 rounds of attacks have occurred."
 msgstr ""
 
 #. [advancement]: id=NFWME_insane_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:727
 msgid "Recover from insanity."
-msgstr ""
+msgstr "Recuperado de locura"
 
 #. [display]: id=maimed_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:757
@@ -499,12 +529,12 @@ msgstr ""
 #. [display]: id=maimed_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:758
 msgid "-15% Hp"
-msgstr ""
+msgstr "-15% PV"
 
 #. [advancement]: id=NFWME_maimed_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:766
 msgid "Recover from maimed."
-msgstr ""
+msgstr "Recuperado de mutilación"
 
 #. [display]: id=necrosis_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:796
@@ -522,7 +552,7 @@ msgstr ""
 #. [advancement]: id=NFWME_neccrosis_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:813
 msgid "Recover from necrosis."
-msgstr ""
+msgstr "Recuperado de necrosis"
 
 #. [display]: id=paper_cut_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:843
@@ -535,7 +565,8 @@ msgstr ""
 msgid ""
 "Due to the intense pain from your cut you cant concentrait on the fight.\n"
 "\n"
-"All damage is reduced by 20% and blade resistance is lowered by 10%. You will never recover from this."
+"All damage is reduced by 20% and blade resistance is lowered by 10%. You "
+"will never recover from this."
 msgstr ""
 
 #. [advancement]: id=NFWME_paper_cut_Healing
@@ -566,7 +597,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:934
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:961
 msgid "Sick"
-msgstr ""
+msgstr "Enfermo"
 
 #. [display]: id=sick_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:935
@@ -576,7 +607,7 @@ msgstr ""
 #. [advancement]: id=NFWME_sick_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:943
 msgid "Recover from sick."
-msgstr ""
+msgstr "Recuperado de enfermedad"
 
 #. [display]: id=lego_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:974
@@ -586,9 +617,11 @@ msgstr ""
 #. [display]: id=lego_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:975
 msgid ""
-"Due to the intense pain of stepping on plastic brick you cant walk properly.\n"
+"Due to the intense pain of stepping on plastic brick you cant walk "
+"properly.\n"
 "\n"
-"Movement is reduced by 20% and accuracy is reduced by 10%. You will never recover from this."
+"Movement is reduced by 20% and accuracy is reduced by 10%. You will never "
+"recover from this."
 msgstr ""
 
 #. [advancement]: id=NFWME_legot_Healing
@@ -609,25 +642,32 @@ msgstr ""
 #. [drains]: id=drains
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1097
 msgid "drains"
-msgstr ""
+msgstr "drena"
 
 #. [drains]: id=drains
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1098
-msgid "This unit drains health from living units, healing itself for half the amount of damage it deals (rounded down)."
+msgid ""
+"This unit drains health from living units, healing itself for half the "
+"amount of damage it deals (rounded down)."
 msgstr ""
+"Esta unidad absorbe vida de unidades vivas, curándose la mitad del daño "
+"causado, redondeado hacia abajo."
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1153
 msgid "ghost"
-msgstr ""
+msgstr "fantasma"
 
 #. [plague]: id=plague, type=Walking Corpse
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1211
 msgid "plague"
-msgstr ""
+msgstr "plaga"
 
 #. [plague]: id=plague, type=Walking Corpse
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1212
-msgid "When a unit is killed by a Plague attack, that unit is replaced with a Walking Corpse on the same side as the unit with the Plague attack. This doesn’t work on Undead or units in villages."
+msgid ""
+"When a unit is killed by a Plague attack, that unit is replaced with a "
+"Walking Corpse on the same side as the unit with the Plague attack. This "
+"doesn’t work on Undead or units in villages."
 msgstr ""
 
 #. [chance_to_hit]: id=marksman
@@ -637,18 +677,19 @@ msgstr ""
 
 #. [chance_to_hit]: id=marksman
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1234
-msgid "When used offensively, this attack always has at least a 50% chance to hit."
+msgid ""
+"When used offensively, this attack always has at least a 50% chance to hit."
 msgstr ""
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1251
 msgid "zombie"
-msgstr ""
+msgstr "zombie"
 
 #. [display]: id=wild_magic_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1264
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1303
 msgid "Wild Magic"
-msgstr ""
+msgstr "Magia Salvaje"
 
 #. [display]: id=wild_magic_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1265
@@ -658,15 +699,16 @@ msgstr ""
 #. [chance_to_hit]: id=magical
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1275
 msgid "wild magic"
-msgstr ""
+msgstr "magia salvaje"
 
 #. [chance_to_hit]: id=magical
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1276
-msgid "This attack always has a 50% chance to hit regardless of the defensive ability of the unit being attacked."
+msgid ""
+"This attack always has a 50% chance to hit regardless of the defensive "
+"ability of the unit being attacked."
 msgstr ""
 
 #. [advancement]: id=NFWME_wild_magic_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1286
 msgid "Recover from Wild Magic."
 msgstr ""
-
