--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2022-11-20 05:41 UTC\n"
-"PO-Revision-Date: 2022-11-20 07:14+0100\n"
+"PO-Revision-Date: 2022-11-21 03:56+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -28,6 +28,12 @@ msgid ""
 "has to survive is wounded. The enemy isn’t going to miss the chance of "
 "finishing the battle by letting a leader escape."
 msgstr ""
+"Las unidades muertas durante un escenario son heridas y pueden recuperarse "
+"en escenarios posteriores.\n"
+"\n"
+"Esto no protege a tus héroes; aún perderás si algún personaje que tiene que "
+"sobrevivir resulta herido. El enemigo no desaprovechará la oportunidad de "
+"terminar la batalla dejando escapar a un líder."
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_LoW.cfg:35
@@ -37,32 +43,36 @@ msgid ""
 "Revenge, and for the story it’s meant to be costly to the elves as well as "
 "these innocent saurians."
 msgstr ""
+"Heridas No Fatales: en toda la línea principal de Wesnoth, este escenario "
+"es probablemente el acto más malvado por parte del jugador. El escenario se "
+"llama Costly Revenge, y para la historia está destinado a ser costoso tanto "
+"para los elfos como para estos inocentes saurios."
 
 #. [option]
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_LoW.cfg:37
 msgid "Disable Non-Fatal Wounds and let the story proceed as expected"
-msgstr ""
+msgstr "Desactiva Heridas No Fatales y continúa la historia como es esperado"
 
 #. [option]
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_LoW.cfg:46
 msgid "Let all the elves survive"
-msgstr ""
+msgstr "Permite a los elfos sobrevivir"
 
 #. [message]: speaker=Shynal
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_SotA.cfg:24
 msgid "Ow, that was close. I’ll rest until the next battle."
-msgstr ""
+msgstr "Uff, eso estuvo cerca. Descansaré hasta la siguiente batalla."
 
 #. [message]: speaker=Carcyn
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_SotA.cfg:33
 msgid "You could have brought her back anyway, right?"
-msgstr ""
+msgstr "Podrías haberla traído de todos modos, ¿verdad?"
 
 #. [message]: speaker=Ras-Tabahn
 #. without this mod, she's brought back as a walking corpse
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_SotA.cfg:45
 msgid "Only in part. She would never have the powers of a lich."
-msgstr ""
+msgstr "Sólo en parte. Ella nunca tendría los poderes de un lich."
 
 #. [message]: speaker=Ras-Tabahn
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaign_SotA.cfg:51
@@ -70,6 +80,8 @@ msgid ""
 "Maybe as a ghost, but even then she would no longer have the powers of a "
 "lich."
 msgstr ""
+"Tal vez como un fantasma, pero incluso entonces ya no tendría los poderes "
+"de un lich."
 
 #. [message]: speaker=narrator
 #. generic message which could apply to any scenario where the storyline already explains why even the surviving units don't reappear later in the campaign
@@ -77,6 +89,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaigns.cfg:56
 msgid "The non-fatal wound modification is disabled for this scenario."
 msgstr ""
+"La modificación Heridas No Fatales está desactivada para este escenario."
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\campaigns.cfg:84
@@ -85,6 +98,10 @@ msgid ""
 "The recall lists change during the campaign, and units that are non-fatally "
 "wounded may reappear on the wrong recall list."
 msgstr ""
+"La modificación de heridas no fatales podría funcionar mal en esta campaña. "
+"Las listas de recuperación cambian durante la campaña, y las unidades que "
+"no están heridas de muerte pueden reaparecer en la lista de recuperación "
+"incorrecta."
 
 #. [message]: speaker=narrator
 #. For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
@@ -94,6 +111,9 @@ msgid ""
 "scenario. The unit survives, but still triggers the same events as if it "
 "died."
 msgstr ""
+"La modificación de Heridas No Fatales no afecta los objetivos de este "
+"escenario. La unidad sobrevive, pero sigue desencadenando los mismos "
+"eventos que si hubiera muerto."
 
 #. [message]: speaker=$unit.id
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\nfw_main.cfg:61
@@ -103,7 +123,7 @@ msgstr "¡Argh...! ¡Estoy herido!"
 #. [message]: speaker=$unit.id
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\nfw_main.cfg:62
 msgid "female^Argh, I’m wounded"
-msgstr ""
+msgstr "Argh, estoy herida"
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Maimed_Edition\Non_Fatal_Wounds\utils\nfw_main.cfg:66
@@ -115,6 +135,12 @@ msgid ""
 "alive. Even if they say they’re only wounded, the enemy will give your "
 "heroes no chance."
 msgstr ""
+"Con esta modificación habilitada, las unidades resultan heridas en lugar de "
+"muertas. Si gana este escenario, se agregarán a su lista de recuperación.\n"
+"\n"
+"Esto no se aplica a ninguna unidad que los objetivos requieran que "
+"mantengas con vida. Incluso si dicen que solo están heridos, el enemigo no "
+"les dará ninguna oportunidad a tus héroes."
 
 #. [modification]: id=nfw_maimed_edition
 #: Non_Fatal_Wounds_Maimed_Edition\_main.cfg:9
@@ -125,6 +151,8 @@ msgstr "Heridas no fatales: Versión Extendida"
 #: Non_Fatal_Wounds_Maimed_Edition\_main.cfg:10
 msgid "A modification of the non-fatal wounds add-on to add lasting injuries."
 msgstr ""
+"Una modificación del complemento de Heridas No Fatales para agregar "
+"lesiones duraderas."
 
 #. [checkbox]: id=dead
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Options.cfg:6
@@ -170,12 +198,12 @@ msgstr "Recuperado de Acuafobia"
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:141
 msgid "Recovered from Acrophobia"
-msgstr ""
+msgstr "Recuperado de Acrofobia"
 
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:167
-msgid "Recovered from Erimophobi"
-msgstr ""
+msgid "Recovered from Erimophobia"
+msgstr "Recuperado de Erimofobia"
 
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:193
@@ -185,7 +213,7 @@ msgstr "Recuperado de Claustrofobia"
 #. [case]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:219
 msgid "Recovered from Dendrophobia"
-msgstr ""
+msgstr "Recuperado de Dendrofobia"
 
 #. [then]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wound_Healing.cfg:256
@@ -209,7 +237,7 @@ msgstr "Recuperado del miedo a la oscuridad"
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:10
 msgid "Amnesia"
-msgstr ""
+msgstr "Amnesia"
 
 #. [display]: id=broken_arm_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:23
@@ -220,12 +248,12 @@ msgstr "Brazo roto"
 #. [display]: id=broken_arm_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:24
 msgid "-20% non-magical damage"
-msgstr ""
+msgstr "Daño no mágico -20%"
 
 #. [advancement]: id=NFWME_broken_arm_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:39
 msgid "Recover from broken arm."
-msgstr ""
+msgstr "Recuperado del brazo roto"
 
 #. [display]: id=broken_leg_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:69
@@ -236,7 +264,7 @@ msgstr "Pierna rota"
 #. [display]: id=broken_leg_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:70
 msgid "-20% mp"
-msgstr ""
+msgstr "Puntos de movimiento -20%"
 
 #. [advancement]: id=NFWME_broken_leg_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:82
@@ -317,11 +345,13 @@ msgid ""
 "-10% accuracy.\n"
 "Redeem yourself by defeating a strong apponent."
 msgstr ""
+"Precisión -10% \n"
+"Redímete derrotando a un oponente fuerte."
 
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:294
 msgid "$unit.name a $unit.type was destroyed."
-msgstr ""
+msgstr "$unit.name a $unit.type fue destruido."
 
 #. [trait]: id=nfwme_dead
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:302
@@ -346,9 +376,11 @@ msgstr "Asustado de $nfwme_rand_scary_weapon"
 #. [attacks]: id=nfwme_scared_of_weapon
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:325
 msgid ""
-"-1 stikes when facing their fear.\n"
+"-1 strikes when facing their fear.\n"
 "Face your fears to try and overcome them."
 msgstr ""
+"Golpes -1 cuando se enfrenta a su miedo.\n"
+"Enfrenta sus miedos para intentar superarlos."
 
 #. [display]: id=fear_of_water_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:373
@@ -362,12 +394,14 @@ msgid ""
 "Scared of water.\n"
 "Face your fears to try and overcome them."
 msgstr ""
+"Miedo al agua. (+1 coste de movimiento)\n"
+"Enfrenta sus miedos para intentar superarlos."
 
 #. [display]: id=fear_of_hight_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:403
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:418
 msgid "Acrophobia"
-msgstr ""
+msgstr "Acrofobia"
 
 #. [display]: id=fear_of_hight_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:404
@@ -375,6 +409,8 @@ msgid ""
 "Scared of hights.\n"
 "Face your fears to try and overcome them."
 msgstr ""
+"Miedo a las alturas. (+1 coste de movimiento)\n"
+"Enfrenta sus miedos para intentar superarlos."
 
 #. [display]: id=fear_of_desert_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:431
@@ -387,16 +423,18 @@ msgid ""
 "Scared of deserts.\n"
 "Face your fears to try and overcome them."
 msgstr ""
+"Miedo a los desiertos. (+1 coste de movimiento)\n"
+"Enfrenta sus miedos para intentar superarlos."
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:446
 msgid "Erimophobia"
-msgstr ""
+msgstr "Erimofobia"
 
 #. [display]: id=fear_of_cave_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:459
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:473
 msgid "Claustrophobia"
-msgstr ""
+msgstr "Claustrofobia"
 
 #. [display]: id=fear_of_cave_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:460
@@ -404,12 +442,14 @@ msgid ""
 "Scared of tight spaces.\n"
 "Face your fears to try and overcome them."
 msgstr ""
+"Miedo a los espacios cerrados. (+1 coste de movimiento)\n"
+"Enfrenta sus miedos para intentar superarlos."
 
 #. [display]: id=fear_of_plant_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:487
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:502
 msgid "Dendrophobia"
-msgstr ""
+msgstr "Dendrofobia"
 
 #. [display]: id=fear_of_plant_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:488
@@ -417,6 +457,8 @@ msgid ""
 "Scared of trees.\n"
 "Face your fears to try and overcome them."
 msgstr ""
+"Miedo a los árboles. (+1 coste de movimiento)\n"
+"Enfrenta sus miedos para intentar superarlos."
 
 #. [attacks]: id=nfwme_scared_of_dark
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:515
@@ -430,6 +472,8 @@ msgid ""
 "-1 strikes in the dark.\n"
 "Face your fears to try and overcome them."
 msgstr ""
+"Miedo a la oscuridad. (Golpes -1 de noche)\n"
+"Enfrenta sus miedos para intentar superarlos."
 
 #. [attacks]: id=nfwme_scared_of_light
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:543
@@ -443,12 +487,14 @@ msgid ""
 "-1 strikes in the light.\n"
 "Face your fears to try and overcome them."
 msgstr ""
+"Miedo a la luz. (Golpes -1 de día)\n"
+"Enfrenta sus miedos para intentar superarlos."
 
 #. [display]: id=frostbite_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:572
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:605
 msgid "Frostbite"
-msgstr ""
+msgstr "Congelación"
 
 #. [display]: id=frostbite_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:573
@@ -464,12 +510,12 @@ msgstr "Recuperado de congelación"
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:618
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:651
 msgid "Gash"
-msgstr ""
+msgstr "Tajo"
 
 #. [display]: id=gash_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:619
 msgid "Blade resistance -10%."
-msgstr ""
+msgstr "Resistencia a filo -10%"
 
 #. [advancement]: id=NFWME_gash_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:634
@@ -480,12 +526,12 @@ msgstr "Recuperado de tajo"
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:664
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:691
 msgid "Infection"
-msgstr ""
+msgstr "Infección"
 
 #. [display]: id=infection_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:665
 msgid "10% chance of being poisoned."
-msgstr ""
+msgstr "Posibilidad del 10% de ser envenenado"
 
 #. [advancement]: id=NFWME_infectiont_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:673
@@ -496,12 +542,12 @@ msgstr "Recuperado de infección"
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:704
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:744
 msgid "Insanity"
-msgstr ""
+msgstr "Locura"
 
 #. [display]: id=insanity_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:705
 msgid "Melee attacks gain berserk."
-msgstr ""
+msgstr "Ataques melé adquieren berserker"
 
 #. [berserk]: id=nfwme_berserk
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:716
@@ -514,6 +560,9 @@ msgid ""
 "Whether used offensively or defensively, this attack presses the engagement "
 "until one of the combatants is slain, or 30 rounds of attacks have occurred."
 msgstr ""
+"Ya sea que se use de manera ofensiva o defensiva, este ataque continúa el "
+"enfrentamiento hasta que uno de los combatientes muere o se han producido "
+"30 rondas de ataques."
 
 #. [advancement]: id=NFWME_insane_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:727
@@ -524,7 +573,7 @@ msgstr "Recuperado de locura"
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:757
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:783
 msgid "Maimed"
-msgstr ""
+msgstr "Mutilado"
 
 #. [display]: id=maimed_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:758
@@ -540,7 +589,7 @@ msgstr "Recuperado de mutilación"
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:796
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:830
 msgid "Necrosis"
-msgstr ""
+msgstr "Necrosis"
 
 #. [display]: id=necrosis_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:797
@@ -548,6 +597,8 @@ msgid ""
 "You are closer to undeath.\n"
 "Arcane resistance -10%"
 msgstr ""
+"Está cerca de la no muerte.\n"
+"Resistencia a Arcano -10%"
 
 #. [advancement]: id=NFWME_neccrosis_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:813
@@ -558,7 +609,7 @@ msgstr "Recuperado de necrosis"
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:843
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:882
 msgid "Paper Cut"
-msgstr ""
+msgstr "Corte de papel"
 
 #. [display]: id=paper_cut_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:844
@@ -568,30 +619,33 @@ msgid ""
 "All damage is reduced by 20% and blade resistance is lowered by 10%. You "
 "will never recover from this."
 msgstr ""
+"Debido al intenso dolor de su corte, no puede concentrarse en la pelea.\n"
+"Todo el daño se reduce en un 20 % y la resistencia a filo 10 %. Nunca se "
+"recuperará de esto."
 
 #. [advancement]: id=NFWME_paper_cut_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:865
 msgid "Recover from Paper Cut."
-msgstr ""
+msgstr "Recuperado del corte de papel"
 
 #. [display]: id=short_term_memory_loss_dummy
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:895
 msgid "Memory Loss"
-msgstr ""
+msgstr "Pérdida de memoria"
 
 #. [display]: id=short_term_memory_loss_dummy
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:896
 msgid "Every round you lose 1 xp."
-msgstr ""
+msgstr "Cada turno perderá 1 Exp."
 
 #. [advancement]: id=NFWME_memory_loss_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:904
 msgid "Recover from Memory Loss."
-msgstr ""
+msgstr "Recuperado de pérdida de memoria"
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:921
 msgid "Short-Term Memory Loss"
-msgstr ""
+msgstr "Pérdida de memoria a corto plazo"
 
 #. [display]: id=sick_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:934
@@ -602,7 +656,7 @@ msgstr "Enfermo"
 #. [display]: id=sick_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:935
 msgid "10% chance of being slowed."
-msgstr ""
+msgstr "Posibilidad del 10% de ser ralentizado"
 
 #. [advancement]: id=NFWME_sick_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:943
@@ -612,7 +666,7 @@ msgstr "Recuperado de enfermedad"
 #. [display]: id=lego_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:974
 msgid "Lego"
-msgstr ""
+msgstr "LEGO"
 
 #. [display]: id=lego_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:975
@@ -623,21 +677,25 @@ msgid ""
 "Movement is reduced by 20% and accuracy is reduced by 10%. You will never "
 "recover from this."
 msgstr ""
+"Debido al intenso dolor de pisar LEGOs, no puedes caminar correctamente.\n"
+"\n"
+"El movimiento se reduce en un 20% y la precisión se reduce en un 10%. Nunca "
+"te recuperarás de esto."
 
 #. [advancement]: id=NFWME_legot_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:993
 msgid "Recover from stepping on lego."
-msgstr ""
+msgstr "Recuperado de pisar LEGOs"
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1010
 msgid "Stepped on Lego"
-msgstr ""
+msgstr "Pisó LEGOs"
 
 #. [effect]
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1091
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1115
 msgid "spectral "
-msgstr ""
+msgstr "espectral "
 
 #. [drains]: id=drains
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1097
@@ -654,8 +712,8 @@ msgstr ""
 "causado, redondeado hacia abajo."
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1153
-msgid "ghost"
-msgstr "fantasma"
+msgid "Ghost"
+msgstr "Fantasma"
 
 #. [plague]: id=plague, type=Walking Corpse
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1211
@@ -669,21 +727,26 @@ msgid ""
 "Walking Corpse on the same side as the unit with the Plague attack. This "
 "doesn’t work on Undead or units in villages."
 msgstr ""
+"Cuando una unidad muere por un ataque de plaga, esa unidad se reemplaza con "
+"un cadáver ambulante en el mismo lado que la unidad con el ataque de plaga. "
+"Esto no funciona con no-muertos o unidades en aldeas."
 
 #. [chance_to_hit]: id=marksman
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1233
 msgid "poor marksmanship"
-msgstr ""
+msgstr "mala puntería"
 
 #. [chance_to_hit]: id=marksman
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1234
 msgid ""
 "When used offensively, this attack always has at least a 50% chance to hit."
 msgstr ""
+"Cuando se usa ofensivamente, este ataque siempre tiene al menos un 50% de "
+"posibilidades de acertar."
 
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1251
-msgid "zombie"
-msgstr "zombie"
+msgid "Zombie"
+msgstr "Zombie"
 
 #. [display]: id=wild_magic_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1264
@@ -694,7 +757,7 @@ msgstr "Magia Salvaje"
 #. [display]: id=wild_magic_display
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1265
 msgid "Magical attacks have a 50% chance to hit."
-msgstr ""
+msgstr "Ataques mágicos tienen un 50% de posibilidades de acertar."
 
 #. [chance_to_hit]: id=magical
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1275
@@ -707,8 +770,10 @@ msgid ""
 "This attack always has a 50% chance to hit regardless of the defensive "
 "ability of the unit being attacked."
 msgstr ""
+"Este ataque siempre tiene un 50% de posibilidades de acertar "
+"independientemente de la capacidad defensiva de la unidad atacada."
 
 #. [advancement]: id=NFWME_wild_magic_Healing
 #: Non_Fatal_Wounds_Maimed_Edition\utils\Wounds.cfg:1286
 msgid "Recover from Wild Magic."
-msgstr ""
+msgstr "Recuperado de Magia Salvaje"
