--- a/translations/wesnoth-Non_Fatal_Wounds/es.po
+++ b/translations/wesnoth-Non_Fatal_Wounds/es.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: \n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2022-12-06 00:24 UTC\n"
-"PO-Revision-Date: 2022-12-06 01:26+0100\n"
+"PO-Revision-Date: 2022-12-07 13:25+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: es\n"
@@ -963,9 +963,9 @@ msgid ""
 "alive. Even if they say they’re only wounded, the enemy will give your "
 "heroes no chance."
 msgstr ""
-"Las unidades muertas durante un escenario son heridas y pueden recuperarse "
-"en escenarios posteriores. Si eliges la posibilidad de muerte o no-muerte, "
-"algunas unidades aún pueden morir definitivamente.\n"
+"Las unidades que pierden toda su vida durante un escenario son heridas y "
+"pueden recuperarse en escenarios posteriores. Si eliges la posibilidad de "
+"muerte o no-muerte, algunas unidades aún pueden morir definitivamente.\n"
 "\n"
 "Esto no protege a tus héroes; aún perderás si algún personaje que tiene que "
 "sobrevivir resulta herido. El enemigo no desaprovechará la oportunidad de "
