--- a/translations/wesnoth-Non_Fatal_Wounds/wesnoth-Non_Fatal_Wounds.pot
+++ b/translations/wesnoth-Non_Fatal_Wounds/wesnoth-Non_Fatal_Wounds.pot
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: https://bugs.wesnoth.org/\n"
-"POT-Creation-Date: 2022-12-17 00:21 UTC\n"
+"POT-Creation-Date: 2022-12-18 11:23 UTC\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,67 +18,93 @@ msgstr ""
 #. [modification]: id=nfw_extended
 #. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\_main.cfg:11
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:201
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:210
 msgid ""
 "With this modification enabled, units are merely wounded instead of killed. If you choose the possibility of dead or undead, some units still can definitely die. If you win this scenario the wounded units will be added to your recall list.\n"
 "\n"
 "This does not apply to any unit that the objectives require you to keep alive. Even if they say they’re only wounded, the enemy will give your heroes no chance."
 msgstr ""
 
-#. [choice]: id=nfw_wounds
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:8
+#. [choice]: id=nfw_01
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:6
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:10
 msgid "Activate Wounds"
 msgstr ""
 
-#. [choice]: id=nfw_wounds
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:9
+#. [choice]: id=nfw_01
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:7
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:10
 msgid "Activate or deactivate random wounds. If you deactivate, the units will disappear without any message and will return in the next scenario unchanged (except in special cases). If you choose to allow lose plagued units, they will disappear forever, since they were converted by the enemy."
 msgstr ""
 
 #. [item]
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:11
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:9
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:347
 msgid "Yes"
 msgstr ""
 
 #. [item]
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:15
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:29
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:13
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:27
 msgid "No"
 msgstr ""
 
 #. [item]
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:19
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:17
 msgid "No, but can lost plagued unit"
 msgstr ""
 
-#. [choice]: id=nfw_deadundead
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:26
+#. [choice]: id=nfw_02
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:24
 msgid "Enable Death"
 msgstr ""
 
-#. [choice]: id=nfw_deadundead
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:27
+#. [choice]: id=nfw_02
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:25
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:147
 msgid "Adds death as a possibility to the table. Undeath option will bring some of them back as undead or ghost."
 msgstr ""
 
 #. [item]
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:33
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:31
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:327
 msgid "Death"
 msgstr ""
 
 #. [item]
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:37
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:35
 msgid "Undeath"
 msgstr ""
 
-#. [checkbox]: id=nfw_funny
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:43
-msgid "Non-canonical Wounds"
+#. [checkbox]: id=nfw_03
+#. [message]: speaker=narrator
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:41
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:227
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:333
+msgid "Funny wounds"
 msgstr ""
 
-#. [checkbox]: id=nfw_funny
-#: Non_Fatal_Wounds_Extended\utils\Options.cfg:44
-msgid "These make no logical sense."
+#. [checkbox]: id=nfw_03
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:42
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:227
+msgid "Add Stepped on LEGO and Paper cut as a possibility to the table."
+msgstr ""
+
+#. [checkbox]: id=nfw_04
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:47
+msgid "Help Menu"
+msgstr ""
+
+#. [checkbox]: id=nfw_04
+#: Non_Fatal_Wounds_Extended\utils\Options.cfg:48
+msgid "Add a contextual menu on right click with help and configurations for all features."
 msgstr ""
 
 #. [then]
@@ -280,7 +306,7 @@ msgstr ""
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:299
 msgid ""
 "Accuracy -15%\n"
-"Redeem yourself by defeating an opponent with at least 1 level higher than you, or any opponent when in AMLA"
+"Redeem yourself by defeating an opponent with at least 1 level higher than you or at his higher level."
 msgstr ""
 
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:311
@@ -602,17 +628,17 @@ msgstr ""
 msgid "Paper Cut"
 msgstr ""
 
-#. [display]: id=short_term_memory_loss_dummy
+#. [display]: id=amnesia_dummy
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:928
 msgid "amnesia"
 msgstr ""
 
-#. [display]: id=short_term_memory_loss_dummy
+#. [display]: id=amnesia_dummy
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:929
 msgid "Every round you lose 2 exp."
 msgstr ""
 
-#. [advancement]: id=NFWME_memory_loss_Healing
+#. [advancement]: id=NFWME_amnesia_Healing
 #: Non_Fatal_Wounds_Extended\utils\Wounds.cfg:937
 msgid "Recover from Amnesia."
 msgstr ""
@@ -731,6 +757,7 @@ msgstr ""
 #. generic message which could apply to any scenario where the storyline already explains why even the surviving units don't reappear later in the campaign
 #: Non_Fatal_Wounds_Extended\utils\campaigns.cfg:39
 #: Non_Fatal_Wounds_Extended\utils\campaigns.cfg:52
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:351
 msgid "The non-fatal wound modification is disabled for this scenario."
 msgstr ""
 
@@ -807,76 +834,269 @@ msgid "Maybe as a ghost, but even then she would no longer have the powers of a 
 msgstr ""
 
 #. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:12
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:149
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:229
+msgid "Set to"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:12
+msgid "(0 = Activated, 1 = Deactivated, 2 = Deactivated but with plague losses)"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:16
+msgid "List of Wounds and healing method"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:21
+msgid ""
+"<b>Wounds list:</b>\n"
+"\n"
+"* <b><i>Wound</i> (effect) > Possible destination units, previous conditions</b>\n"
+"\n"
+"* <i>Amnesia</i> (loses 2 xp/round) > All units, random\n"
+"* <i>Broken arm</i> (-20% non-magical damage) > Races with arms, random\n"
+"* <i>Broken wind</i> (-20% mp) > Races with winds, random\n"
+"* <i>Broken leg</i> (-20% mp) > Races with legs, random\n"
+"* <i>Broken rib</i> (-30% impact resistance) > Not mechanical, killed with impact attack\n"
+"* <i>Burned</i> (-30% fire resistance) > All units, killed with fire attack\n"
+"* <i>Captured</i> (increased recall cost based on level) > All units, random\n"
+"* <i>Concussion</i> (-20% magical damage) > Units with magical attacks, random\n"
+"* <i>Coward</i> (-15% accuracy) > Not mechanical, random\n"
+"* <i>Fear of weapon</i> (reduced 1 strikes against what wounded them) > Not mechanical, killed with any weapon\n"
+"* <i>Fear of the dark/light</i> (reduced 1 strikes during the time they were wounded) > Not mechanical, killed on day, night, or underground\n"
+"* <i>Fear of terrain</i> (increased 1-2 move cost for the terrain they were wounded on) > Not mechanical, killed on some terrains\n"
+"* <i>Frostbite</i> (-30% cold resistance) > All units, killed with ice attack\n"
+"* <i>Gash</i> (-30% blade resistance) > ALl units, killed with blade attack\n"
+"* <i>Infection</i> (10% chance to be poisoned every turn) > Not mechanical or not unpoisonable, random\n"
+"* <i>Sick</i> (20% chance of being slowed every turn) > All units, random\n"
+"* <i>Insanity</i> (berserk on melee attacks) > Units without berserk ability\n"
+"* <i>Maimed</i> (-20% hp) > All units, random\n"
+"* <i>Necrosis</i> (-30% arcane resistance) > Not mechanical, random\n"
+"* <i>Short-term memory loss</i> (resets experience) > Units with more than 1/2 of the max experience, random\n"
+"* <i>Wild magic</i> (magical attacks now are 50% chance) > Units with magic attack, random\n"
+"* <i>Plagued</i> (equivalent to death) > Units non unplagueables, killed with plague attack, allways"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:48
+msgid ""
+"<b>Wounds healing:</b>\n"
+"\n"
+"* <i>Fear of terrain</i>: 10% chance of recovery when defeating an opponent while standing on the terrain unit is scared of.\n"
+"* <i>Fear of weapon</i>: 20% chance of recovery when defeating an opponent wielding the weapon the unit is scared of.\n"
+"* <i>Fear of light/dark</i>: 5% chance of recovery when defeating an opponent during the day/night.\n"
+"* <i>Coward</i>: 20% chance of recovery when defeat an enemy 1 level higher or at his highest level.\n"
+"* <i>Short-term memory loss</i>: is an 1-use wound and is healed inmediately.\n"
+"* <i>Captured</i>: is an 1-use wound and is healed when the unit is recalled the first time.\n"
+"* The rest of wounds can be healed choosing a recover AMLA instead of the advancement or default AMLA (still can advance later to the next advancement).\n"
+"* Optional wounds can't be healed at all."
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:61
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:111
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:128
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:191
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:208
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:261
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:278
+msgid "Back to help menu"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:70
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:120
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:137
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:200
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:217
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:270
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:287
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:363
+msgid "Exit"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:78
+msgid "Change status of Wounds"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:82
+msgid "Set status of Wounds."
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:84
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:243
+msgid "Activate"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:93
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:164
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:252
+msgid "Deactivate"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:102
+msgid "Deactivate, but can lost plagued unit"
+msgstr ""
+
+#. [option]
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:173
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:147
+msgid "Activate Death"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:149
+msgid "(0 = Deactivated, 1 = Death, 2 = Death + Undeath)"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:151
+msgid ""
+"<b>Wounds list:</b>\n"
+"* Death (definitive death)\n"
+"* Turning into a ghost (custom ghost, can't advance beyond level 2) > Units that are not already spirits or ghosts\n"
+"* Turning into a zombie (custom zombie, heavily debuffed ranged attacks) > Units that are not already undead"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:158
+msgid "Change status of Death"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:162
+msgid "Set status of Death."
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:182
+msgid "Activate Death, Undeath and Ghosts"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:231
+msgid ""
+"<b>Wounds list:</b>\n"
+"* <i>Paper cut</i> (-20% to all damage and -30% blade resistance) > All units\n"
+"* <i>Stepping on a Lego</i> (-20% mp and -15% accuracy) > All units"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:237
+msgid "Change status of Funny wounds"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:241
+msgid "Set status of Funny wounds."
+msgstr ""
+
+#. [set_menu_item]: id=nfw_help
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:301
+msgid "NFW help"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:317
+msgid "Choose the feature you want help with"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:321
+msgid "Wounds"
+msgstr ""
+
+#. [option]
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:339
+msgid "Stop Non-Fatal Wounds for this scenario"
+msgstr ""
+
+#. [message]: speaker=narrator
+#: Non_Fatal_Wounds_Extended\utils\help_menu.cfg:343
+msgid "Are you sure? This cannot be undone. Non-Fatal Wounds will be activated again the next scenario."
+msgstr ""
+
+#. [message]: speaker=narrator
 #: Non_Fatal_Wounds_Extended\utils\last_scenario.cfg:20
 msgid "Because this is the last scenario, the ending of the campaign will count wounded units as if they had been killed."
 msgstr ""
 
 #. [message]: speaker=$unit.id
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:89
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:108
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:128
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:98
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:117
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:137
 msgid "Argh, I’m dying"
 msgstr ""
 
 #. [message]: speaker=$unit.id
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:90
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:109
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:129
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:99
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:118
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:138
 msgid "female^Argh, I’m dying"
 msgstr ""
 
 #. [message]: speaker=narrator
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:94
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:103
 msgid "$unit.name a $nfwme_unit_type.name was destroyed."
 msgstr ""
 
 #. [message]: speaker=narrator
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:113
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:122
 msgid "$unit.name a $nfwme_unit_type.name was revived as undead."
 msgstr ""
 
 #. [message]: speaker=narrator
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:133
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:142
 msgid "$unit.name a $nfwme_unit_type.name returned as a ghost."
 msgstr ""
 
 #. [message]: speaker=$unit.id
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:148
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:157
 msgid "Argh"
 msgstr ""
 
 #. [message]: speaker=$unit.id
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:149
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:158
 msgid "female^Argh"
 msgstr ""
 
 #. [message]: speaker=narrator
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:153
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:162
 msgid "$unit.name a $nfwme_unit_type.name was converted by the enemy."
 msgstr ""
 
 #. [message]: speaker=$unit.id
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:168
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:177
 msgid "Please rescue me!"
 msgstr ""
 
 #. [message]: speaker=$unit.id
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:169
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:178
 msgid "female^Please rescue me!"
 msgstr ""
 
 #. [message]: speaker=narrator
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:173
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:182
 msgid "$unit.name a $nfwme_unit_type.name was captured by the enemy. You will have to pay a ransom."
 msgstr ""
 
 #. [message]: speaker=$unit.id
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:181
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:190
 msgid "Argh, I’m wounded"
 msgstr ""
 
 #. [message]: speaker=$unit.id
-#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:182
+#: Non_Fatal_Wounds_Extended\utils\nfw_main.cfg:191
 msgid "female^Argh, I’m wounded"
 msgstr ""
 
